
// DO NOT EDIT: the "Unreleased" section header is automatically updated by the release workflow
// which will fail on any of:
// - unreleased section not found,
// - unreleased section empty
// - optional attribute is not [breaking] or [minor breaking]
//   (adjust these in ci_relase.clj as you see fit)

== Unreleased

* Bumped deps (used during test generation only)

== v1.1.20 - 2024-05-06 [[v1.1.20]]

* Tests can now be generated from a header-less doc
https://github.com/lread/test-doc-blocks/issues/25[#25]
(thanks for the feedback https://github.com/genmeblog[@genmeblog]!)
* Bumped malli (used during test generation only)

https://github.com/lread/test-doc-blocks/compare/v1.1.19\...v1.1.20[commit log]

== v1.1.19 - 2024-05-02 [[v1.1.19]]

* Drop `alpha` status, we don't have many users, but folks have been using this lib for years
* Reviewed and refreshed docs
* Bumped library deps (these are used during test generation only)
* No longer engaging clj-kondo's lint feature during code analysis

https://github.com/lread/test-doc-blocks/compare/v1.0.166-alpha\...v1.1.19[commit log]

== v1.0.166-alpha - 2021-11-27 [[v1.0.166-alpha]]

* While preserving our existing `-X` command line interface, add a more conventional main command line interface to support leiningen (and potentially Windows) users https://github.com/lread/test-doc-blocks/issues/8[#8]
* Now failing when a requested file/glob does not exist https://github.com/lread/test-doc-blocks/issues/9[#9]
* Bump deps
* Internal test-doc-blocks developer facing:
** Migrate from `depstar` to `tools.build`

https://github.com/lread/test-doc-blocks/compare/v1.0.146-alpha\...v1.0.166-alpha[commit log]

== v1.0.146-alpha - 2021-08-30 [[v1.0.146-alpha]]

* Add support for `(refer-clojure ...)` in doc blocks https://github.com/lread/test-doc-blocks/issues/5[#5]
* Bump rewrite-clj to v1.0.682-alpha

https://github.com/lread/test-doc-blocks/compare/v1.0.137-alpha\...v1.0.146-alpha[commit log]
